# Blockchain_rust

./: Cargo.toml  README.md
blockchain/: Cargo.toml  DEPENDENCY_UPGRADE_FINAL_REPORT_2025.md  DEPENDENCY_UPGRADE_SUMMARY_2025.md  PROJECT_ADVANCEMENT_SUMMARY_2025.md  PROJECT_COMPLETION_REPORT_2025.md  PROJECT_STATUS_2025.md  README.md
blockchain/benches/: blockchain_benchmarks.rs  performance_bench.rs
blockchain/docs/: 01_CORE_CONCEPTS.md  02_CRYPTOGRAPHIC_FOUNDATIONS.md  03_DISTRIBUTED_SYSTEMS.md  04_CONSENSUS_THEORY.md  05_FORMAL_VERIFICATION.md  06_SECURITY_MODELS.md  07_MATHEMATICAL_FOUNDATIONS.md  08_ARCHITECTURE_DESIGN.md  09_NETWORK_PROTOCOLS.md  10_STORAGE_SYSTEMS.md  11_PERFORMANCE_OPTIMIZATION.md  12_RUST_IMPLEMENTATION.md  13_CRYPTO_IMPLEMENTATION.md  14_CONSENSUS_IMPLEMENTATION.md  15_NETWORK_IMPLEMENTATION.md  16_INTERNATIONAL_STANDARDS.md  17_INDUSTRY_STANDARDS.md  18_PROTOCOL_SPECIFICATIONS.md  19_SECURITY_BEST_PRACTICES.md  20_DEVELOPMENT_GUIDELINES.md  21_TESTING_STRATEGIES.md  22_DEFI_APPLICATIONS.md  23_NFT_ECOSYSTEM.md  24_WEB3_TECHNOLOGIES.md  25_EMERGING_TECHNOLOGIES_2025.md  25_ENTERPRISE_SOLUTIONS.md  26_HANDS_ON_PROJECTS.md  27_CASE_STUDIES.md  28_TROUBLESHOOTING.md  ADVANCED_FEATURES_2025.md  API.md  API_REFERENCE.md  ARCHITECTURE_DESIGN_2025.md  ARCHITECTURE_REDESIGN_SUMMARY_2025.md  BLOCKCHAIN_ARCHITECTURE_ANALYSIS_2025.md  BLOCKCHAIN_STANDARDS_ANALYSIS_2025.md  DOCUMENTATION_COMPLETION_REPORT_2025.md  DOCUMENTATION_RESTRUCTURE_SUMMARY_2025.md  DOCUMENT_STRUCTURE_VALIDATION_2025.md  FUNCTION_ANALYSIS_2025.md  (+13 more)
blockchain/docs/view/: blockchain_computational_model_analysis.md  blockchain_formal_language_analysis.md  blockchain_information_theory_analysis.md  blockchain_semantic_model_analysis.md  blockchain_sequential_structure_analysis.md
blockchain/docs/view/ref/: 区块链的形式化基础：从逻辑到实现.md  区块链的形式逻辑基础与推论01.md  区块链的形式逻辑基础与推论02.md  区块链的形式逻辑基础与推论03.md  区块链的形式逻辑基础与推论07.md  区块链的形式逻辑基础与推论08.md  区块链的形式逻辑基础与推论：构建信任的数学基石.md
blockchain/examples/: architecture_demo.rs  complete_blockchain_demo.rs  consensus_demo.rs  demo.rs  glommio_demo.rs  performance_demo.rs  security_demo.rs  simple_demo.rs  smart_contract_demo.rs
blockchain/scripts/: generate_docs.rs
blockchain/src/: advanced_cryptography.rs  advanced_cryptography_simple.rs  cli.rs  consensus.rs  database.rs  lib.rs  main.rs  monitoring.rs  p2p_network.rs  performance.rs  security.rs  simple_blockchain.rs  smart_contract_engine.rs  web_api.rs
blockchain/src/algorithms/: consensus_algorithms.rs  cryptographic_algorithms.rs  mod.rs  optimization_algorithms.rs
blockchain/src/components/: mod.rs
blockchain/src/components/consensus/: dpos.rs  mod.rs  pbft.rs  pos.rs  pow.rs
blockchain/src/components/cryptography/: encryption.rs  hash.rs  mod.rs  signature.rs
blockchain/src/components/network/: message.rs  mod.rs  p2p.rs  peer.rs
blockchain/src/components/storage/: block_storage.rs  merkle_storage.rs  mod.rs  state_storage.rs  transaction_storage.rs
blockchain/src/core/: block.rs  blockchain.rs  merkle.rs  mod.rs  state.rs  transaction.rs
blockchain/src/docs/: mod.rs
blockchain/src/layers/: mod.rs
blockchain/src/layers/application/: mod.rs
blockchain/src/layers/business/: mod.rs  smart_contract_engine.rs  state_manager.rs  transaction_processor.rs  wallet_manager.rs
blockchain/src/layers/infrastructure/: cache.rs  database.rs  logging.rs  mod.rs  monitoring.rs
blockchain/src/layers/protocol/: discovery_protocol.rs  message_protocol.rs  mod.rs  network_protocol.rs  sync_protocol.rs
blockchain/src/security/: mod.rs
blockchain/src/smart_contracts/: compiler.rs  mod.rs  runtime.rs  vm.rs
blockchain/src/utils/: crypto_utils.rs  encoding_utils.rs  mod.rs  time_utils.rs  validation_utils.rs
