[package]
name = "blockchain"
version = "0.1.0"
edition = "2024"
resolver = "3"
authors = ["Rust Blockchain Team"]
description = "区块链应用演示 - 展示 Rust 1.90 特性在区块链开发中的应用"
license = "MIT"
repository = "https://github.com/rust-lang/blockchain"
keywords = ["blockchain", "rust", "cryptocurrency", "consensus"]
categories = ["cryptography", "algorithms", "data-structures"]
rust-version = "1.90"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
bincode = { workspace = true }
sha2 = { workspace = true }
rand = { workspace = true }
tokio = { workspace = true }
chrono = { workspace = true }

# 区块链专用依赖 - 2025年10月最新稳定版本
secp256k1 = "0.31.1"
ed25519-dalek = "2.2.0"
blake2 = "0.11.0-rc.2"
hex = "0.4.3"
ripemd = "0.2.0-rc.1"

# Web3 和区块链生态库 - 2025年10月最新版本
alloy = { version = "1.0.36", features = ["full"], optional = true }
ethabi = { version = "18.0.0", optional = true }
rlp = { version = "0.6.0", optional = true }
keccak = { version = "0.1.4", optional = true }

# 高级密码学库 - 2025年10月最新版本
curve25519-dalek = { version = "4.1.3", optional = true }
x25519-dalek = { version = "2.0.1", optional = true }
chacha20poly1305 = { version = "0.10.1", optional = true }
aes-gcm = { version = "0.10.3", optional = true }
ring = { version = "0.17.14", optional = true }
pbkdf2 = "0.12.2"

# CLI 支持 - 2025年10月最新版本
clap = { version = "4.5.48", features = ["derive", "env"] }
uuid = { version = "1.18.1", features = ["v4", "serde"] }
console = "0.16.1"
indicatif = "0.18.0"

# 网络和异步 - 2025年10月最新版本
tokio-tungstenite = { version = "0.28.0", optional = true }
async-trait = "0.1.89"
futures = "0.3.31"
crossbeam-channel = { version = "0.5.12", optional = true }
parking_lot = "0.12.4"
rayon = "1.11.0"

# 日志支持
log = "0.4.28"

# 高性能网络库 - 2025年10月最新版本
quinn = { version = "0.11.0", optional = true }
libp2p = { version = "0.56.0", optional = true, features = ["tcp", "yamux", "noise", "mdns"] }

# 数据库支持 - 2025年10月最新版本
sled = { version = "0.34.7", optional = true }
rocksdb = { version = "0.24.0", optional = true }

# 现代数据库选择 - 2025年10月最新版本
redb = { version = "3.1.0", optional = true }
heed = { version = "0.22.0", optional = true }

# 序列化增强 - 2025年10月最新版本
rmp-serde = "1.3.0"
cbor4ii = "1.1.1"

# 高性能序列化 - 2025年10月最新版本
borsh = "1.5.7"
postcard = "1.1.3"

# 密码学增强 - 已移至上方统一管理

# 智能合约支持 - 2025年10月最新版本
wasmtime = { version = "37.0.1", optional = true }

# 智能合约开发框架 - 2025年10月最新版本
ink = { version = "5.1.0", optional = true }

# 高性能异步运行时 - 实验性支持 (仅Linux)
glommio = { version = "0.9.0", optional = true }

# Rust 1.90+ 特性支持
[features]
default = ["basic", "crypto-advanced"]
basic = ["crypto-advanced"]  # 基础区块链功能默认启用加密算法
advanced = ["ffi", "smart-contracts", "p2p", "web3", "libp2p"]  # 高级功能（暂时禁用database）
ffi = []  # 启用 FFI 功能
smart-contracts = []  # 智能合约支持 (暂时禁用 WASM 运行时)
p2p = ["tokio-tungstenite", "crossbeam-channel", "libp2p"]  # P2P 网络
database = ["sled", "rocksdb", "redb"]  # 数据库支持
crypto-advanced = ["ring", "aes-gcm", "chacha20poly1305", "curve25519-dalek", "x25519-dalek"]  # 高级密码学
web3 = ["alloy", "ethabi", "rlp"]  # Web3 支持
quinn = ["dep:quinn"]  # QUIC 网络协议
modern-db = ["redb", "heed"]  # 现代数据库选择
glommio-runtime = ["glommio"]  # 高性能异步运行时 (实验性)

# 开发依赖
[dev-dependencies]
criterion = { workspace = true }
proptest = { workspace = true }

# 示例
[[example]]
name = "basic_blockchain"
path = "examples/basic_blockchain.rs"

[[example]]
name = "rust_189_demo"
path = "examples/rust_189_demo.rs"

[[example]]
name = "demo"
path = "examples/demo.rs"

[[example]]
name = "simple_demo"
path = "examples/simple_demo.rs"

[[example]]
name = "consensus_demo"
path = "examples/consensus_demo.rs"

[[example]]
name = "smart_contract_demo"
path = "examples/smart_contract_demo.rs"
required-features = ["smart-contracts"]

[[example]]
name = "performance_demo"
path = "examples/performance_demo.rs"

[[example]]
name = "security_demo"
path = "examples/security_demo.rs"
required-features = ["advanced"]

[[example]]
name = "glommio_demo"
path = "examples/glommio_demo.rs"
required-features = ["glommio-runtime"]

[[example]]
name = "architecture_demo"
path = "examples/architecture_demo.rs"
required-features = ["advanced"]

[[example]]
name = "complete_blockchain_demo"
path = "examples/complete_blockchain_demo.rs"
required-features = ["advanced"]

[[bench]]
name = "blockchain_benchmarks"
harness = false
